Swapping LinkedList for ArrayList